--- a/.gitignore
+++ b/.gitignore
@@ -62,7 +62,7 @@ typings/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
 
 # Thumbnails
 ._*
@@ -82,3 +82,6 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# distribution folder
+dist
