--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "minimal-react-biolerplate",
+  "name": "bitcoin-admin-panel",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,40 +15,43 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-preset-env": "^1.4.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "chai": "^4.0.0",
-    "css-loader": "^0.28.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-react": "^7.0.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "html-webpack-plugin": "^2.28.0",
-    "html5-boilerplate": "0.0.1",
-    "mocha": "^3.4.2",
-    "node-sass": "^4.5.2",
-    "react-addons-test-utils": "^15.5.1",
-    "react-hot-loader": "^1.3.1",
-    "rimraf": "^2.6.1",
-    "sass-loader": "^6.0.3",
-    "sinon": "^2.3.2",
-    "style-loader": "^0.16.1",
-    "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.5"
+    "chai": "^4.1.2",
+    "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "html-webpack-plugin": "^3.2.0",
+    "html5-boilerplate": "6.0.1",
+    "mini-css-extract-plugin": "^0.4.0",
+    "mocha": "^5.1.1",
+    "node-sass": "^4.9.0",
+    "react-addons-test-utils": "^15.6.2",
+    "react-hot-loader": "^4.1.2",
+    "rimraf": "^2.6.2",
+    "sass-loader": "^7.0.1",
+    "sinon": "^4.5.0",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15",
+    "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
     "classnames": "^2.2.5",
-    "prop-types": "^15.5.10",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-redux": "^5.0.4",
-    "redux": "^3.6.0",
+    "normalize-css": "^2.3.1",
+    "prop-types": "^15.6.1",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "short-uuid": "^2.3.4"
+    "short-uuid": "^3.0.0"
   }
 }
