--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
+    "recompose": "^0.27.0",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "short-uuid": "^3.0.0"
